Perfect pixel  в Chrome

--- a/catalog.html
+++ b/catalog.html
@@ -64,8 +64,8 @@
   </nav>
   <div class="conteiner-time">
     <ul class="breadcrumbs">
-      <li class="breadcrumbs__menu"><a class="breadcrumbs__link" href="index.html">Главная</a><span class="breadcrumbs-decor">&raquo</span></li>
-      <li class="breadcrumbs__menu"><a class="breadcrumbs__link" href="#">Каталог</a><span class="breadcrumbs-decor">&raquo</span></li>
+      <li class="breadcrumbs__menu"><a class="breadcrumbs__link" href="index.html">Главная</a><span class="breadcrumbs-decor">&raquo;</span></li>
+      <li class="breadcrumbs__menu"><a class="breadcrumbs__link" href="#">Каталог</a><span class="breadcrumbs-decor">&raquo;</span></li>
       <li class="breadcrumbs__menu">Сливочное</li>
     </ul>
     <div class="time-info-wrap">
@@ -135,73 +135,73 @@
     <ul class="product product--creamy">
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/bestseller-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-        <p class="icy-cream-item__info">310 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">310<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/bestseller-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-        <p class="icy-cream-item__info">380 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">380<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочно-кофейное с кусочками шоколада</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/bestseller-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-        <p class="icy-cream-item__info">355 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">355<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/bestseller-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-        <p class="icy-cream-item__info">415 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">415<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное крем-брюле с карамельной подливкой</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/icecream-2a.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
-        <p class="icy-cream-item__info">325 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">325<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное с брусничным<br> джемом</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/icecream-2b.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
-        <p class="icy-cream-item__info">410 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">410<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочно-черничное с цельными ягодами черники</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/icecream-2c.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
-        <p class="icy-cream-item__info">375 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">375<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочно-лимонное с карамельной присыпкой</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/icecream-2d.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
-        <p class="icy-cream-item__info">320 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">320<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное с шоколадной стружкой</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/icecream-3a.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
-        <p class="icy-cream-item__info">440 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
-        <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочно-ванильное с кусочками шоколада</a></p>
+        <p class="icy-cream-item__info">440<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочно-ванильное с<br> кусочками шоколада</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/icecream-3b.jpg" width="267" height="267" alt="Сливочное с ментоловым сиропом">
-        <p class="icy-cream-item__info">435 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">435<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное с ментоловым сиропом</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/icecream-3c.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
-        <p class="icy-cream-item__info">355 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">355<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное с кусочками черного шоколада</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item">
         <img class="icy-cream-item__img" src="img/icecream-3d.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
-        <p class="icy-cream-item__info">420 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">420<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное с мятным сиропом</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
