--- a/index.html
+++ b/index.html
@@ -92,25 +92,25 @@
     <ul class="product">
       <li class="icy-cream-item icy-cream-item--hit">
         <img class="icy-cream-item__img" src="img/bestseller-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-        <p class="icy-cream-item__info">310 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">310<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item icy-cream-item--hit">
         <img class="icy-cream-item__img" src="img/bestseller-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-        <p class="icy-cream-item__info">380 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">380<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочно-кофейное с кусочками шоколада</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item icy-cream-item--hit">
         <img class="icy-cream-item__img" src="img/bestseller-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-        <p class="icy-cream-item__info">355 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">355<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
       <li class="icy-cream-item icy-cream-item--hit">
         <img class="icy-cream-item__img" src="img/bestseller-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-        <p class="icy-cream-item__info">415 ₽<span class="icy-cream-item__info--weight">/кг</span></p>
+        <p class="icy-cream-item__info">415<span class="icy-cream-item__info--currency">₽</span><span class="icy-cream-item__info--weight">/кг</span></p>
         <p class="icy-cream-item__description"><a class="icy-cream-item__link" href="#">Сливочное крем-брюле с карамельной подливкой</a></p>
         <button type="button" class="button button--product">Быстрый просмотр</button>
       </li>
@@ -145,8 +145,8 @@
 <section class="map">
   <div class="map__container">
     <div class="address">
-      <p class="address__info">Адрес главного офиса <br>и офлайн-магазина:<span class="address__bold">ул.Большая Конюшенная 19/8,Санкт-Петербург</span></p>
-      <p class="address__info">Для заказов по телефону:<span class="address__bold">8 812 450-25-25</span>(с 10 до 20 ежедневно)</p>
+      <p class="address__info">Адрес главного офиса <br>и офлайн-магазина:<span class="address__bold">ул. Большая Конюшенная 19/8, Санкт-Петербург</span></p>
+      <p class="address__info">Для заказов по телефону:<span class="address__bold address__bold--phone">8 812 450-25-25</span>(с 10 до 20 ежедневно)</p>
       <button type="button" class="button button--feedback">Форма обратной связи</button>
     </div>
   </div>
@@ -173,7 +173,6 @@
   <p class="footer-copyright__made-in">Сделано в <a class="footer-link" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &copy; 2017</p>
 </div>
 </footer>
-</div>
 <!--Всплывающее окно -->
 <section class="feedback">
 <button class="feedback-close" type="button">Закрыть</button>
