форма на внутренней под safari

--- a/catalog.html
+++ b/catalog.html
@@ -77,6 +77,7 @@
 <main class="catalog">
   <h1 class="catalog__title">Сливочное мороженое</h1>
   <form class="catalog-form" method="get" action="https://echo.htmlacademy.ru">
+    <div class="catalog-form-container">
     <div class="catalog-form-block">
       <label class="input-name">Сортировка:</label>
       <div class="catalog-select">
@@ -113,6 +114,8 @@
         <label class="catalog-label label-fat" for="more-thirty-percent">выше 30%</label>
       </div>
     </fieldset>
+  </div>
+  <div class="catalog-form-container">
     <fieldset class="catalog-input-filler catalog-form-block">
       <legend class="input-name">Наполнители:</legend>
       <div class="catalog-form-item catalog-form-item--checkbox">
@@ -129,6 +132,7 @@
       </div>
     </fieldset>
     <button class="form-btn">Применить</button>
+  </div>
   </form>
   <section class="creamy-ice-cream">
     <h2 class="visually-hidden">Ассортимент сливочного мороженого</h2>
