--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <form class="nav-form nav-form--login" method="post" action="https://echo.htmlacademy.ru">
             <input class="nav-input nav-input--login" type="email" name="email" placeholder="Электронная почта" aria-label="Электронная почта">
             <input class="nav-input nav-input--login" type="password" name="password" id="password-info" placeholder="Пароль" aria-label="Пароль">
-            <button type="button" class="button button--login">Войти</button>
+            <a class="button button--login" href="#">Войти</a>
             <a class="nav-login-link" href="#">Забыли пароль?</a>
             <a class="nav-login-link" href="#">Новая регистрация</a>
           </form></li>
@@ -150,7 +150,7 @@
       <button type="button" class="button button--feedback">Форма обратной связи</button>
     </div>
   </div>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.599104370522!2d30.320889251890595!3d59.938794181787266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+Street%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2slv!4v1528043560284" width="100%" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.599104370522!2d30.320889251890595!3d59.938794181787266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+Street%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2slv!4v1528043560284" allowfullscreen></iframe>
 </section>
 <div class="container">
   <footer class="main-footer">
@@ -178,12 +178,12 @@
 <button class="feedback-close" type="button">Закрыть</button>
 <h3 class="feedback-title">Мы обязательно вам ответим!</h3>
 <form class="feedback-form" method="post" action="https://echo.htmlacademy.ru">
-<input class="nav-input feedback-form-input" type="text" name="name" placeholder="Как вас зовут?" aria-label="Как вас зовут">
-<input class="nav-input feedback-form-input" type="email" name="email" placeholder="Ваша почта для ответа?" aria-label="Ваша почта для ответа">
-<textarea class="nav-input feedback-form-text" name="text" rows="6" placeholder="Напишите что-нибудь..." aria-label="Напишите что-нибудь"></textarea>
-<div class="wrap-btn-feedback">
-  <button type="submit" class="button feedback-btn">Отправить</button>
-</div>
+  <input class="nav-input feedback-form-input" type="text" name="name" placeholder="Как вас зовут?" aria-label="Как вас зовут">
+  <input class="nav-input feedback-form-input" type="email" name="email" placeholder="Ваша почта для ответа?" aria-label="Ваша почта для ответа">
+  <textarea class="nav-input feedback-form-text" name="text" rows="6" placeholder="Напишите что-нибудь..." aria-label="Напишите что-нибудь"></textarea>
+  <div class="wrap-btn-feedback">
+    <a class="button feedback-btn" href="#">Отправить</a>
+  </div>
 </form>
 </section>
 <div class="feedback-overlay"></div>
